--- a/static/style.css
+++ b/static/style.css
@@ -48,3 +48,92 @@ td {
 	position: relative;
 	padding-bottom: 100px; /* height of your footer */
 }
+
+
+.dream-header {
+	background-image: url("/static/images/LandingImage.png");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	height: 500px;
+}
+
+/*.line-right {
+	border-right: solid 2px #ffffff;
+}*/
+.header-span {
+	margin: 10px;
+	padding-right: 10px;
+	margin-right: 10px;
+}
+.header-content {
+	text-align: center;
+	position: relative;
+	top: 35%;
+	width: 30%;	
+	padding: 30px;
+	vertical-align: middle;
+	font-size: 20px;
+}
+
+h1, h3 {
+	color: #ffffff;
+}
+
+.logo {
+	width: 30px;
+	height: 30px;
+}
+
+body {
+	/*font-family: 'Raleway', sans-serif;*/
+	font-family: 'Quicksand', sans-serif;
+}
+
+.dream-nav {
+	position: absolute;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+#select_cities_chosen {
+	width: 100%;
+	padding-right: 2rem;
+	padding-left: 1rem;
+	padding-top: .5rem;
+	padding-bottom: .5rem;
+	line-height: 1.25;
+	border-width: 1px;
+	border-radius: .25rem;
+	border-color: #dae1e7;
+	background-color: #fff;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	font-family: inherit;
+	text-transform: none;
+	font-size: 100%;
+	margin: 0;
+}
+
+.chosen-single {
+	box-shadow: inherit !important;
+	background: inherit !important;
+	border: none !important;
+}
+
+.chosen-container-single .chosen-single div b {
+    display: none !important;
+}
+
+.chosen-container .chosen-drop {
+	border-width: 1px !important;
+	border-color: #dae1e7 !important;
+}
+
+.dreamer-main-content {
+	background-color : #f3f3f3
+}
+
+li {
+	list-style: none;
+}
