--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -18,7 +20,8 @@
     <title>{% block title %}{% endblock %} - Dream Vacation</title>
     {% endblock %}
   </head>
-  <body class="bg-grey-lighter">
+  <body class="bg-white">
+
     {% include "navbar.html" %}
     
 {% with messages = get_flashed_messages(with_categories=true) %}
