--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% block content %}
-<nav class="flex items-center justify-between flex-wrap bg-grey-darkest p-6 mb-6">
-  <div class="flex items-center flex-no-shrink text-white mr-6">
-    <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
+<nav class="dream-nav flex items-center justify-between flex-wrap bg-transparent p-6 mb-6">
+  <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2">
+    <img class="logo" src="{{ url_for('static', filename='images/american airlines logo.png') }}">
     <span class="font-semibold text-xl tracking-tight">Dream Vacation</span>
   </div>
   <div class="block lg:hidden">
