--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,23 +1,30 @@
 {% block content %}
-<nav class="dream-nav flex items-center justify-between flex-wrap bg-transparent p-6 mb-6">
-  <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2">
-    <img class="logo" src="{{ url_for('static', filename='images/american airlines logo.png') }}">
-    <span class="font-semibold text-xl tracking-tight">Dream Vacation</span>
-  </div>
+<nav class="dream-nav flex items-center justify-between flex-wrap bg-transparent p-6 mb-6 w-full">
+  <a href="/" class="no-underline block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
+    <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2">
+      <img class="logo" src="{{ url_for('static', filename='images/american airlines logo.png') }}">
+      <span class="font-semibold text-xl tracking-tight">Dream Vacation</span>
+    </div>
+  </a>
   <div class="block lg:hidden">
     <button class="flex items-center px-3 py-2 border rounded text-white border-teal-light hover:text-white hover:border-white">
       <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
     </button>
   </div>
-  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-    <div class="text-sm lg:flex-grow">
-      <!-- <a href="/" class="no-underline block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
-        Home
-      </a> -->
+  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto items-end">
+    {% if current_user.is_authenticated %}
+    <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2 text-right w-full">
+      <span class="text-sm px-4 py-2 leading-none text-white font-semibold tracking-tight">Welcome, {{ current_user.firstname }}!</span>
+      <a href="/logout" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 lg:mt-0">Logout</a>
     </div>
-   <!--  <div>
-      <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 lg:mt-0">Download</a>
-    </div> -->
+    {% else %}
+    <div class="">
+      <a href="/login" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 lg:mt-0 mx-4">Login</a>
+    </div>
+    <div class="">
+      <a href="/signup" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 lg:mt-0 mx-4">Signup</a>
+    </div>
+    {% endif %}
   </div>
 </nav>
   {% endblock %}
