--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@ Home
 
 <div class="dream-header">
     <div class="align-middle header-content">
-            <h1>Dream Vacation</h1>
-            <h3><span class="line-right header-span">Think</span> | <span class="line-right header-span">Click</span> | <span class="header-span">Go</span></h3>
+            <h1 class="text-white">Dream Vacation</h1>
+            <h3 class="text-white"><span class="line-right header-span">Think</span> | <span class="line-right header-span">Click</span> | <span class="header-span">Go</span></h3>
     </div>
 </div>
 
