--- a/static/footer.css
+++ b/static/footer.css
@@ -11,7 +11,7 @@
 }
 
 .footer-basic-centered .footer-company-motto{
-	color:  #8d9093;
+	/*color:  #8d9093;*/
 	font-size: 24px;
 	margin: 0;
 }
@@ -25,7 +25,7 @@
 .footer-basic-centered .footer-links{
 	list-style: none;
 	font-weight: bold;
-	color:  #ffffff;
+	/*color:  #ffffff;*/
 	padding: 35px 0 23px;
 	margin: 0;
 }
@@ -33,7 +33,7 @@
 .footer-basic-centered .footer-links a{
 	display:inline-block;
 	text-decoration: none;
-	color: inherit;
+	/*color: inherit;*/
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
