--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.4.2/chosen.jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.4.2/chosen.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='footer.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='footer.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jquery-ui.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
