--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,19 +1,19 @@
-<footer class="bg-grey-darkest footer-basic-centered">
+<footer class="dreamer-main-content footer-basic-centered">
 
-			<p class="footer-company-motto">Making your dream a reality.</p>
+			<p class="text-grey-darker footer-company-motto">Making your dream a reality.</p>
 
-			<p class="footer-links">
-				<a href="/">Home</a>
+			<p class="text-grey-darker footer-links">
+				<a href="/" class="text-grey-darker">Home</a>
 				·
-				<a href="#">Blog</a>
+				<a href="#" class="text-grey-darker">Blog</a>
 				·
-				<a href="#">Pricing</a>
+				<a href="#" class="text-grey-darker">Pricing</a>
 				·
-				<a href="/about">About</a>
+				<a href="/about" class="text-grey-darker">About</a>
 				·
-				<a href="/faq">Faq</a>
+				<a href="/faq" class="text-grey-darker">Faq</a>
 				·
-				<a href="/contact">Contact</a>
+				<a href="/contact" class="text-grey-darker">Contact</a>
 			</p>
 
 			<p class="footer-company-name">©2018 Dream Vacation</p>
