:sparkles: initial flight html

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="dream-nav flex items-center justify-between flex-wrap bg-transparent p-6 mb-6">
   <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2">
     <img class="logo" src="{{ url_for('static', filename='images/american airlines logo.png') }}">
-    <span class="font-semibold text-xl tracking-tight">Dream Vacation</span>
+    <span class="font-semibold text-xl tracking-tight" id="titleId">Dream Vacation</span>
   </div>
   <div class="block lg:hidden">
     <button class="flex items-center px-3 py-2 border rounded text-white border-teal-light hover:text-white hover:border-white">
