--- a/static/style.css
+++ b/static/style.css
@@ -25,10 +25,6 @@
 	margin-left: 20px;
 }
 
-td {
-	border-bottom: solid #000000 2px;
-}
-
 .evo-form {
 	display: inline-block;
 	text-align: left;
@@ -132,4 +128,28 @@ body {
 
 li {
 	list-style: none;
+}
+
+.dream-cell {
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	vertical-align: middle;
+	background-color: #ffffff;
+	border: solid 1px #000000;
+	cursor: pointer;
+	display: inline-block;
+}
+
+.dream-cell.active {
+	border: solid 1px teal;
+}
+
+.itin-pic {
+	width: 50px !important;
+	height: 50px !important;
+}
+
+td {
+	padding: 10px !important;
 }
