--- a/templates/flight.html
+++ b/templates/flight.html
@@ -12,16 +12,27 @@
     color: #797979;
     font-size: 25px;
     text-align: center;
-    transition: all 0.2s;
-    margin: 0 auto;
-    width: 600px;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
   }
-  #destTable tr:nth-child(even){
+  #destTable {
+    margin-top: 20px;
+    border-spacing: 10px 10px;
+    width: 100%;
+  }
+  #destTable td {
     background: #fff;
+    border-bottom: none !important;
+    padding: 12px 0px 12px;
+  }
+  #destTable th {
+    padding: 5px 0px 12px;
   }
 </style>
 
-<div id="destFlights">
+<div id="destFlights" class="flex">
   {% if flights %}
   <table id='destTable'>
     <tr>
@@ -33,11 +44,11 @@
     </tr>
     {% for flight in flights %}
     <tr>
-      <td><input type="radio" name="pick" value="1"/></td>
+      <td style="padding: 0px 10px"><input type="radio" name="pick" value="1"/></td>
       <td>{{ flight['flightNumber'] }}</td>
 	  <td>{{ flight['departureTime'] }}</td>
       <td>{{ flight['arrivalTime'] }}</td>
-      <td>{{ flight['cost'] }}</td>
+      <td style="padding: 0px 10px">{{ flight['cost'] }}</td>
     </tr>
     {% endfor %}
   </table>
