--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,8 @@
     {% if current_user.is_authenticated %}
     <div class="flex items-center flex-no-shrink text-white mr-6 ml-8 mt-2 text-right w-full">
       <span class="text-sm px-4 py-2 leading-none text-white font-semibold tracking-tight">Welcome, {{ current_user.firstname }}!</span>
-      <a href="/logout" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-black hover:bg-white mt-4 lg:mt-0">Logout</a>
+      <a href="/profile" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-black hover:bg-white mt-4 lg:mt-0 mx-4">Profile</a>
+      <a href="/logout" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-black hover:bg-white mt-4 lg:mt-0 mx-4">Logout</a>
     </div>
     {% else %}
     <div class="">
