--- a/templates/events.html
+++ b/templates/events.html
@@ -65,10 +65,10 @@ Events
 	</div>
 </div>
 <div class="p-4 mr-4 float-right">
-	<input type="submit" name="itinerary" value="BOOK TICKETS" id="itinerary"  class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded" />
+	<input type="submit" name="itinerary" value="BOOK TICKETS" id="itinerary"  class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded cursor-pointer" />
 	<script type="text/javascript">
 		$('#itinerary').click(function(e) {
-			console.log("we bought tickets");
+			window.location.href = '/confirm';
 		});
 	</script>
 </div>
