--- a/templates/profile.html
+++ b/templates/profile.html
@@ -109,7 +109,7 @@ Profile
 			</tr>
 		</table>
 	</div>
-	<div class="w-1/2 dreamer-main-content p-4 mt-4 ml-16">
+	<div class="w-1/2 dreamer-main-content p-4 ml-16">
 		<table class="m-4">
 			<tr class="h-16">
 				<th class="w-1/5">Upcoming Flights</th>
@@ -132,7 +132,7 @@ Profile
 				</th>
 				<tr class="border-grey-dark m-4 text-center">
 					<td class="text-sm w-1/5">
-						New York - New Dheli
+						New York - New Delhi
 					</td>
 					<td class="text-sm w-1/5">
 						43 Days
@@ -141,35 +141,80 @@ Profile
 						Business
 					</td>
 					<td class="text-sm w-1/5">
-						70%
+						<div class="single-chart" style="margin-left: 35%;">
+						    <svg viewBox="0 0 36 36" class="circular-chart orange">
+						      <path class="circle-bg"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+						      />
+						      <path class="circle"
+						        stroke-dasharray="45, 100"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+												      />
+						      <text x="18" y="20.35" class="percentage">45%</text>
+							</svg>
+						</div>
 					</td>
 				</tr>
 				<tr class="border-grey-dark m-4 text-center">
 					<td class="text-sm w-1/5">
-						New York - New Dheli
+						New York - Paris
 					</td>
 					<td class="text-sm w-1/5">
-						43 Days
+						13 Days
 					</td>
 					<td class="text-sm w-1/5">
 						Business
 					</td>
 					<td class="text-sm w-1/5">
-						70%
+						<div class="single-chart" style="margin-left: 35%;">
+						    <svg viewBox="0 0 36 36" class="circular-chart green">
+						      <path class="circle-bg"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+						      />
+						      <path class="circle"
+						        stroke-dasharray="90, 100"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+												      />
+						      <text x="18" y="20.35" class="percentage">90%</text>
+							</svg>
+						</div>
 					</td>
 				</tr>
 				<tr class="border-grey-dark m-4 text-center">
 					<td class="text-sm w-1/5">
-						New York - New Dheli
+						New York - Orlando
 					</td>
 					<td class="text-sm w-1/5">
-						43 Days
+						21 Days
 					</td>
 					<td class="text-sm w-1/5">
 						Business
 					</td>
 					<td class="text-sm w-1/5">
-						70%
+						<div class="single-chart" style="margin-left: 35%;">
+						    <svg viewBox="0 0 36 36" class="circular-chart blue">
+						      <path class="circle-bg"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+						      />
+						      <path class="circle"
+						        stroke-dasharray="70, 100"
+						        d="M18 2.0845
+						          a 15.9155 15.9155 0 0 1 0 31.831
+						          a 15.9155 15.9155 0 0 1 0 -31.831"
+												      />
+						      <text x="18" y="20.35" class="percentage">70%</text>
+							</svg>
+						</div>
 					</td>
 				</tr>
 			</table>
