oof need to replace not toggle

--- a/templates/flight.html
+++ b/templates/flight.html
@@ -128,7 +128,7 @@
       }
     }
     $('.arrival').change(function() {
-        $('#retFlights').toggleClass('disabled');
+        $('#retFlights').removeClass('disabled');
     });
   </script>
 </div>
@@ -174,7 +174,7 @@
       }
     }
     $('.departure').change(function() {
-        $('#btn-submit').toggleClass('disabled');
+        $('#btn-submit').removeClass('disabled');
     });
   </script>
 </div>
