--- a/templates/flight.html
+++ b/templates/flight.html
@@ -5,18 +5,6 @@
   #titleId{
     color: #5C5C5C !important;
   }
-/*  #destFlights{
-    background: #f4f4f4;
-    border-radius: 4px;
-    padding: 20px;
-    color: #797979;
-    font-size: 25px;
-    text-align: center;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 700px;
-  }*/
   #destTable {
     margin-top: 20px;
     border-spacing: 10px 10px;
@@ -88,7 +76,7 @@
     {% endfor %}
   </table>
   {% else %}
-  <h3>There are currently no destination flights.</h3>
+  <h3 style="text-align:center">There are currently no outgoing flights.</h3>
   {% endif %}
   <script>
     var dir = "asc";
@@ -128,7 +116,7 @@
       }
     }
     $('.arrival').change(function() {
-        $('#retFlights').toggleClass('disabled');
+        $('#retFlights').removeClass('disabled');
     });
   </script>
 </div>
@@ -157,7 +145,7 @@
     {% endfor %}
   </table>
   {% else %}
-  <h3>There are currently no destination flights.</h3>
+  <h3 style="text-align:center">There are currently no incoming flights.</h3>
   {% endif %}
   <script>
     function disableTable(datestr) {
@@ -174,7 +162,7 @@
       }
     }
     $('.departure').change(function() {
-        $('#btn-submit').toggleClass('disabled');
+        $('#btn-submit').removeClass('disabled');
     });
   </script>
 </div>
