--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jquery-ui.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
+    <link rel="icon" href="{{ url_for('static', filename='images/logo.png') }}">
+
     <title>{% block title %}{% endblock %} - Dream Vacation</title>
     {% endblock %}
   </head>
