--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,20 +21,48 @@ Dashboard
 	}
 </style>
 {% block content %}
-{% for i in data %}
-	<div class="location-container">
-		<h3>{{ data['name'] }}</h3>
-		<p>
-			{% for event in item['events'] %}
-				<ul>
-					<li>
-						{{ item['events'] }}
-					</li>
-				</ul>
-			{% endfor %}
-		</p>
+<div class="pt-16 mx-6">
+{% for city in data %}
+	<div class="max-w-lg w-2/5 lg:flex my-4 shadow-md cursor-pointer city-card" id="{{ city['name'] }}">
+	  <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://tailwindcss.com/img/card-left.jpg')" title="Woman holding a mug">
+	  </div>
+	  <div class="w-full border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+	    <div class="mb-8">
+	      <!-- <p class="text-sm text-grey-dark flex items-center">
+	        <svg class="fill-current text-grey w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+	          <path d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z" />
+	        </svg>
+	        Members only
+	      </p> -->
+	      <div class="text-black font-bold text-xl mb-2">{{ city['name'] }}</div>
+	      <p class="text-grey-darker text-base">${{ city['price'] }} Average Cost</p>
+	    </div>
+	    <!-- <div class="flex items-center">
+	      <img class="w-10 h-10 rounded-full mr-4" src="https://pbs.twimg.com/profile_images/885868801232961537/b1F6H4KC_400x400.jpg" alt="Avatar of Jonathan Reinink">
+	      <div class="text-sm">
+	        <p class="text-black leading-none">Jonathan Reinink</p>
+	        <p class="text-grey-dark">Aug 18</p>
+	      </div>
+	    </div> -->
+	    <div class="flex justify-center">
+	  		<input type="submit" name="choose-city" value="Get Tickets" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded cursor-pointer" data-name="{{ city['name'] }}"/>
+	  	</div>
+	  </div>
 	</div>
 {% endfor %}
+</div>
+<script type="text/javascript">
+	$('.city-card').each(function() {
+		$(this).click(function() {
+			$('.info-cards').each(function() { $(this).addClass('hidden') });
+			id = '#' + $(this).id;
+			$(id).removeClass('hidden');
+		});
+	});
+	$('input[name=choose-city]').click(function() {
+		window.location.href = '/flight?start={{start}}&end={{end}}&origin={{origin}}&destination=' + $(this).data('name');
+	});
+</script>
 
 {% endblock %}
 {% endblock %}
