--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -21,13 +21,16 @@ Confirm
     }
 </style>
 
-<div class="w-full max-w-md mx-auto pt-16">
+<div class="w-full max-w-md mx-auto pt-16" style="margin-bottom: 500px;">
     <h1>
         Thank you for buying tickets with us!
     </h1>
     <h3 class="text-center">
         We hope you have a safe and fun trip
     </h3>
+    <div class="text-center mt-16">
+        <img class="rounded-lg" width="300px" height="300px" src="{{ url_for('static', filename='images/thanks.png') }}">
+    </div>
 </div>
 
 {% endblock %}
