--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@ Dashboard
 </style>
 {% block content %}
 <div class="pt-16 mx-6">
-{% for city in data %}
+{% for city in data if (city['price'] | float) > 0.0 %}
 	<div class="max-w-lg w-2/5 lg:flex my-4 shadow-md cursor-pointer city-card" id="{{ city['name'] }}">
 	  <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://tailwindcss.com/img/card-left.jpg')" title="Woman holding a mug">
 	  </div>
